# cyclotron-cs265

./: Cargo.toml  README.md
src/: emu.rs  lib.rs  main.rs  memfuzz.rs  sim.rs  utils.rs
src/base/: behavior.rs  component.rs  mem.rs  mod.rs  parameterizable.rs  port.rs  state.rs
src/builtin/: queue.rs  stack.rs
src/muon/: config.rs  core_cytron.rs  csr.rs  decode.rs  execute.rs  isa.rs  mod.rs  scheduler.rs  warp.rs
src/sim/: elf.rs  mod.rs  port.rs  top.rs  toy_mem.rs
test/: gemm.S  gemm.baseline.S  gemm.baseline.dump  gemm.baseline.elf  gemm.c  gemm.dump  gemm.elf  gemm.nobank.S  gemm.nobank.dump  gemm.nobank.elf  gemm.sh  vecadd.S  vecadd.baseline.S  vecadd.baseline.dump  vecadd.baseline.elf  vecadd.dump  vecadd.elf  vecadd.nobank.S  vecadd.nobank.dump  vecadd.nobank.elf  vecadd.sh
test/eval/: eval.py
