[package]
name = "cyclotron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
rand = "0.8.5"
goblin = "0.5"
log = "0.4.22"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2"
env_logger = "0.11.5"
# sv-parser = "0.13.3"
itertools = "0.13.0"

[lib]
name = "cyclotron"
crate-type = ["rlib", "dylib"]
